# rust-augeas

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
augeas/: Cargo.toml
augeas/examples/: userinfo.rs
augeas/src/: error.rs  flags.rs  lib.rs
augeas_src/: Cargo.toml
augeas_src/src/: lib.rs
augeas_src/testcrate/: Cargo.toml  build.rs
augeas_sys/: Cargo.toml  README.md  build.rs
examples/: userinfo.rs
src/: error.rs  lib.rs  util.rs
