[package]
name = "augeas"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>", "David Lutterkort <lutter@watzmann.net>", "Alexis Mousset <alexis.mousset@rudder.io>"]
description = "Augeas bindings for Rust"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/amousset/rust-augeas"
edition = "2021"
rust-version = "1.77"

[dependencies]
augeas_sys = { path = "augeas_sys" }
bitflags = "2.6.0"
libc = "0.2.43"

[workspace]
