[package]
name = "augeas_sys"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>", "Alexis Mousset <alexis.mousset@rudder.io>"]
description = "Low level bindings for augeas"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/amousset/rust-augeas"
edition = "2021"
rust-version = "1.77"

[dependencies]

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.14"
