[package]
name = "augeas_sys"
version = "0.2.0"
authors = ["panicbit <panicbit.dev@gmail.com>", "Alexis Mousset <alexis.mousset@rudder.io>"]
description = "Low level bindings for augeas"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/amousset/rust-augeas"
edition = "2021"
rust-version = "1.77"

[dependencies]

[build-dependencies]
bindgen = "0.70.1"
pkg-config = { version = "0.3.14", optional = true }
augeas_src = { path = "../augeas_src", optional = true }

[features]
default = ["pkg-config"]
bundled = ["augeas_src"]


[package.metadata.docs.rs]
no-default-features = true
features = ["bundled"]